--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,9 @@
     <link href="libs/bootstrap.min.css" rel="stylesheet">
     <script src="libs/bootstrap.min.js"></script>
 
+    <!--Bootstrap Icons-->
+    <link href="libs/bootstrap-icons.css" rel="stylesheet">
+
     <!--Notify-->
     <script src="libs/bootstrap-notify.min.js"></script>
 
