--- a/src/index.html
+++ b/src/index.html
@@ -234,16 +234,36 @@
                                 </knockout>
 
                                 <knockout class="left">
-                                    <knockout data-bind="text: Routes.getName(player.route(), player.region)"></knockout>
+                                    <div class="d-inline position-relative">
+                                        <a href="#" class="route-link-overlay" data-bind="tooltip: {
+                                            title: RouteHelper.getAvailablePokemonListForTooltip(player.route(), player.region),
+                                            html: true,
+                                            placement: 'bottom',
+                                            trigger: 'focus',
+                                            sanitize: false,
+                                            fallbackPlacement: ['bottom','bottom','bottom','bottom']
+                                        }"></a>
+                                        <knockout data-bind="text: Routes.getName(player.route(), player.region)"></knockout>
+                                    </div>
+
+                                    <!--If there is still a missing Pokémon on the route-->
+                                    <knockout data-bind="if: (!RouteHelper.routeCompleted(player.route(), player.region, true) && !RouteHelper.routeCompleted(player.route(), player.region, false)),
+                                        tooltip: { title: 'You have not captured all Pokémon on this route yet!', trigger: 'hover' }">
+                                        <img title="" class="pokeball-smallest"
+                                             src="assets/images/pokeball/None.svg"/>
+                                    </knockout>
+
                                     <!--If all Pokémon on the route are caught-->
-                                    <knockout data-bind="if: (!RouteHelper.routeCompleted(player.route(), player.region, true) && RouteHelper.routeCompleted(player.route(), player.region, false))">
-                                        <img title="You have captured all Pokémon on this route!" class="pokeball-smallest"
+                                    <knockout data-bind="if: (!RouteHelper.routeCompleted(player.route(), player.region, true) && RouteHelper.routeCompleted(player.route(), player.region, false)),
+                                        tooltip: { title: 'You have captured all Pokémon on this route!', trigger: 'hover' }">
+                                        <img title="" class="pokeball-smallest"
                                              src="assets/images/pokeball/Pokeball.svg"/>
                                     </knockout>
 
                                     <!--If all Pokémon on the route are caught shiny-->
-                                    <knockout data-bind="if: RouteHelper.routeCompleted(player.route(), player.region, true)">
-                                        <img title="You have captured all Pokémon shiny on this route!" class="pokeball-smallest"
+                                    <knockout data-bind="if: RouteHelper.routeCompleted(player.route(), player.region, true),
+                                        tooltip: { title: 'You have captured all Pokémon shiny on this route!', trigger: 'hover' }">
+                                        <img title="" class="pokeball-smallest"
                                              src="assets/images/pokeball/Pokeball-shiny.svg"/>
                                     </knockout>
                                 </knockout>
