--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,7 @@
 @import "templates/caughtStatusTemplate.html"
 @import "templates/eggSVGTemplate.html"
 @import "templates/multiOptionTemplate.html"
+@import "templates/caughtStatusAreaTemplate.html"
 
 <div id="game" class="container loading" data-bind="css: {'container': Settings.getSetting('gameDisplayStyle').observableValue() === 'standard3', 'container-fluid': Settings.getSetting('gameDisplayStyle').observableValue() !== 'standard3'}">
     <div class="row justify-content-center">
@@ -246,26 +247,14 @@
                                         <knockout data-bind="text: Routes.getName(player.route(), player.region)"></knockout>
                                     </div>
 
-                                    <!--If there is still a missing Pokémon on the route-->
-                                    <knockout data-bind="if: (!RouteHelper.routeCompleted(player.route(), player.region, true) && !RouteHelper.routeCompleted(player.route(), player.region, false)),
-                                        tooltip: { title: 'You have not captured all Pokémon on this route yet!', trigger: 'hover' }">
-                                        <img title="" class="pokeball-smallest"
-                                             src="assets/images/pokeball/None.svg"/>
-                                    </knockout>
-
-                                    <!--If all Pokémon on the route are caught-->
-                                    <knockout data-bind="if: (!RouteHelper.routeCompleted(player.route(), player.region, true) && RouteHelper.routeCompleted(player.route(), player.region, false)),
-                                        tooltip: { title: 'You have captured all Pokémon on this route!', trigger: 'hover' }">
-                                        <img title="" class="pokeball-smallest"
-                                             src="assets/images/pokeball/Pokeball.svg"/>
-                                    </knockout>
-
-                                    <!--If all Pokémon on the route are caught shiny-->
-                                    <knockout data-bind="if: RouteHelper.routeCompleted(player.route(), player.region, true),
-                                        tooltip: { title: 'You have captured all Pokémon shiny on this route!', trigger: 'hover' }">
-                                        <img title="" class="pokeball-smallest"
-                                             src="assets/images/pokeball/Pokeball-shiny.svg"/>
-                                    </knockout>
+                                    <knockout data-bind="template: { 
+                                        name: 'caughtStatusAreaTemplate', 
+                                        data: { 
+                                            'areaTypeText': 'on this route',
+                                            'areaCompleted': RouteHelper.routeCompleted(player.route(), player.region, false),
+                                            'areaCompletedShiny': RouteHelper.routeCompleted(player.route(), player.region, true)
+                                        }
+                                    }"></knockout>
                                 </knockout>
 
                                 <knockout>
