--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,9 @@
 <!-- Show keyitems modal-->
 @import "itemModal.html"
 
+<!-- Show Gem list draggable modal -->
 @import "gemsModalSmall.html"
+
 <!--Templates -->
 @import "templates/currencyTemplate.html"
 @import "templates/caughtStatusTemplate.html"
