Gem list draggable modal

--- a/src/index.html
+++ b/src/index.html
@@ -681,7 +681,7 @@
 
 
 <script>
-$("#edit_row_btn").click(function () {
+$("#draggable_modal_btn").click(function () {
   //open modal
   $( "body" ).addClass( "forceScroll" );
   $("#dragable_modal").modal({
