Avoid draggable modal go out of bounds

--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,7 @@
 @import "templates/caughtStatusAreaTemplate.html"
 @import "templates/pokemonNameTemplate.html"
 
+<div id="window-container" style="width: 100%; height: 100%; position: fixed; top: 0; left: 0;"></div>
 <div id="game" class="container loading" data-bind="css: {'container': Settings.getSetting('gameDisplayStyle').observableValue() === 'standard3', 'container-fluid': Settings.getSetting('gameDisplayStyle').observableValue() !== 'standard3'}">
     <div class="row justify-content-center">
         <!--The id title is needed for a default marker for money animation to display when not in a wild battle where the playerMoney span is not visible-->
@@ -681,34 +682,39 @@
 
 
 <script>
-$("#draggable_modal_btn").click(function () {
-  //open modal
-  $( "body" ).addClass( "forceScroll" );
-  $("#dragable_modal").modal({
-    backdrop: false,
-    show: true,
-  });
-  // reset modal if it isn't visible
-  if (!$(".modal.in").length) {
-    $("#dragable_modal").css({
-      top: 20,
-      left: 100,
-    });
-  }
+    $(document).ready(() => {
+        $("#draggable_modal_btn").click(function () {
+            // Open modal
+            $( "body" ).addClass( "forceScroll" );
+            $("#dragable_modal").modal({
+                backdrop: false,
+                show: true,
+            });
 
-  $(".modal-dialog").draggable({
-    cursor: "move",
-    handle: ".dragable_touch",
-  });
-});
+            // Reset modal if it isn't visible
+            if (!$(".modal.in").length) {
+                $("#dragable_modal").css({
+                    top: 20,
+                    left: 100,
+                });
+            }
 
-$('#dragable_modal').on('hidden.bs.modal', () => {
-    $( "body" ).removeClass( "forceScroll" );
-    $("#dragable_modal").css({
-      top: 0,
-      left: 0,
+            $(".modal-dialog").draggable({
+                cursor: "move",
+                handle: ".dragable_touch",
+                containment: "#window-container",
+                scroll: false,
+            });
+        });
+
+        $('#dragable_modal').on('hidden.bs.modal', () => {
+            $( "body" ).removeClass( "forceScroll" );
+            $("#dragable_modal").css({
+                top: 0,
+                left: 0,
+            });
+        });
     });
-});
 </script>
 
 </body>
