Moved file to components/draggables

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
 @import "itemModal.html"
 
 <!-- Show Gem list draggable modal -->
-@import "gemsModalSmall.html"
+@import "draggables/gemsModalSmall.html"
 
 <!--Templates -->
 @import "templates/currencyTemplate.html"
