--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,10 @@
 @import "templates/pokemonSpriteTemplate.html"
 @import "templates/pokemonGenderTemplate.html"
 @import "templates/pokemonAttackTemplate.html"
+@import "templates/areaNameTemplate.html"
+@import "templates/pokerusStatusAreaTemplate.html"
+@import "templates/areaStatisticTemplate.html"
+@import "templates/clickAttackTemplate.html"
 
 <div id="window-container" style="width: 100%; height: 100%; position: fixed; top: 0; left: 0;"></div>
 <div id="game" class="container loading" data-bind="css: {'container': Settings.getSetting('gameDisplayStyle').observableValue() === 'standard3', 'container-fluid': Settings.getSetting('gameDisplayStyle').observableValue() !== 'standard3'}">
@@ -237,13 +241,8 @@
                     <div class="row justify-content-center no-gutters" data-bind="if: App.game.gameState === GameConstants.GameState.fighting">
                         <div class="col no-gutters clickable" data-bind="click: function() {Battle.clickAttack()}" style="height: 280px; display: block;">
                             <h2 class="pageItemTitle" style="display: block;">
-                                <knockout class="right" data-bind="using: App.game.statistics.routeKills[player.region][player.route()]()">
-                                    <knockout data-bind="text: $data.toLocaleString('en-US')">0</knockout>
-                                    <knockout data-bind="visible: $data < GameConstants.ROUTE_KILLS_NEEDED">/10</knockout>
-                                    &nbsp;defeated
-                                </knockout>
                                 <!-- Pokemon List -->
-                                <knockout class="left">
+                                <knockout class="right">
                                     <div class="d-inline position-relative" data-bind="tooltip: { 
                                         title: 'Click here to see the available Pokémon on this route',
                                         trigger: 'hover' 
@@ -256,17 +255,9 @@
                                             sanitize: false,
                                             fallbackPlacement: ['bottom','bottom','bottom','bottom']
                                         }"></a>
-                                        <knockout data-bind="text: Routes.getName(player.route(), player.region)"></knockout>
+                                        <knockout><img src="assets/images/shortcut-icons/damage-calculator.png"></knockout>
+                                        
                                     </div>
-
-                                    <knockout data-bind="template: { 
-                                        name: 'caughtStatusAreaTemplate', 
-                                        data: { 
-                                            'areaTypeText': 'on this route',
-                                            'areaCompleted': RouteHelper.routeCompleted(player.route(), player.region, false),
-                                            'areaCompletedShiny': RouteHelper.routeCompleted(player.route(), player.region, true)
-                                        }
-                                    }"></knockout>
                                 </knockout>
 
                                 <knockout>
@@ -306,32 +297,32 @@
                                     <!-- ko if: App.game.gameState === GameConstants.GameState.fighting -->
                                     <td width="50%">
                                       <span style="display: inline;">
-                                        <knockout data-bind="text: Routes.getName(player.route(), player.region)"></knockout>
-                                        <!--If all Pokémon on the route are caught-->
-                                        <knockout data-bind="if: (!RouteHelper.routeCompleted(player.route(), player.region, true) && RouteHelper.routeCompleted(player.route(), player.region, false))">
-                                            <img title="You have captured all Pokémon on this route!" class="pokeball-smallest"
-                                                 src="assets/images/pokeball/Pokeball.svg"/>
-                                        </knockout>
-
-                                        <!--If all Pokémon on the route are caught shiny-->
-                                        <knockout data-bind="if: RouteHelper.routeCompleted(player.route(), player.region, true)">
-                                            <img title="You have captured all Pokémon shiny on this route!" class="pokeball-smallest"
-                                                 src="assets/images/pokeball/Pokeball-shiny.svg"/>
-                                        </knockout>
-
-                                        <!--Pokérus image-->
-                                        <knockout data-bind="if: RouteHelper.minPokerusCheck(RouteHelper.getAvailablePokemonList(player.route(), player.region, true))">
-                                            <img data-bind="attr:{ src: 'assets/images/breeding/pokerus/' + GameConstants.Pokerus[RouteHelper.minPokerus(RouteHelper.getAvailablePokemonList(player.route(), player.region, true))] + '.png'}"
-                                          src=""/>
-                                        </knockout>
+                                        <knockout data-bind="template: { name: 'areaNameTemplate', data: { 'areaName': Routes.getName(player.route(), player.region) } }">Route name</knockout>
+                                        <!-- Poké Ball image -->
+                                        <knockout data-bind="template: { 
+                                            name: 'caughtStatusAreaTemplate', 
+                                            data: { 
+                                                'areaTypeText': 'on this route',
+                                                'areaCompleted': RouteHelper.routeCompleted(player.route(), player.region, false),
+                                                'areaCompletedShiny': RouteHelper.routeCompleted(player.route(), player.region, true)
+                                            }
+                                        }"></knockout>
+                                        <!-- Pokérus image -->
+                                        <knockout data-bind="template: { name: 'pokerusStatusAreaTemplate', data: { 'pokemonList': RouteHelper.getAvailablePokemonList(player.route(), player.region, true) } }">Pokerus icon</knockout>
                                       </span>
                                     </td>
                                     <td width="50%">
-                                      <knockout data-bind="using: App.game.statistics.routeKills[player.region][player.route()]()">
-                                          <knockout data-bind="text: $data.toLocaleString('en-US')">0</knockout>
-                                          <knockout data-bind="visible: $data < GameConstants.ROUTE_KILLS_NEEDED">/10</knockout>
-                                          &nbsp;Pokémon defeated
-                                      </knockout>
+                                    <!--
+                                        <knockout data-bind="using: App.game.statistics.routeKills[player.region][player.route()]()">
+                                            <knockout data-bind="text: $data.toLocaleString('en-US')">0</knockout>
+                                            <knockout data-bind="visible: $data < GameConstants.ROUTE_KILLS_NEEDED">/10</knockout>
+                                            &nbsp;Pokémon defeated
+                                        </knockout>
+                                    -->
+                                        <knockout data-bind="template: { name: 'areaStatisticTemplate', data: { 
+                                            'statistic': App.game.statistics.routeKills[player.region][player.route()](), 
+                                            'statisticText': (App.game.statistics.routeKills[player.region][player.route()]() < GameConstants.ROUTE_KILLS_NEEDED ? '/10' : '') + ' Pokémon defeated' } 
+                                        }">Statistic name</knockout> 
                                     </td>
                                     <!-- /ko -->
                                   </tr>
@@ -340,9 +331,7 @@
                                         <knockout data-bind="template: { name: 'pokemonAttackTemplate', data: { 'pokemon': Battle.enemyPokemon() } }"></knockout>
                                     </td>
                                     <td width="50%" data-bind="css: { 'text-muted': App.game.challenges.list.disableClickAttack.active() }">
-                                        <span style="display: inline;">Click Attack:
-                                            <span data-bind="text: App.game.party.calculateClickAttack().toLocaleString('en-US')"></span>
-                                        </span>
+                                        <knockout data-bind="template: { name: 'clickAttackTemplate' }">Click attack</knockout>
                                     </td>
                                   </tr>
                                 </table>
