Changed route pokemon list icon

--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@
                             <h2 class="pageItemTitle" style="display: block;">
                                 <!-- Pokemon List -->
                                 <knockout class="right">
-                                    <div class="d-inline position-relative" data-bind="tooltip: { 
+                                    <div class="route-pokemon-list-icon px-1" data-bind="tooltip: { 
                                         title: 'Click here to see the available Pokémon on this route',
                                         trigger: 'hover' 
                                     }">
@@ -255,7 +255,7 @@
                                             sanitize: false,
                                             fallbackPlacement: ['bottom','bottom','bottom','bottom']
                                         }"></a>
-                                        <knockout><img src="assets/images/shortcut-icons/damage-calculator.png"></knockout>
+                                        <img src="assets/images/shortcut-icons/poke-list.png">
                                         
                                     </div>
                                 </knockout>
